src/parser/snapshots/monkey_language_server__parser__test__fn_expr_unhappy_10_errors.snap
---
source: src/parser/test.rs
description: "fn(@) { return x; }"
expression: "parser_errors(\"fn(@) { return x; }\", errors)"
---
fn(@) { return x; }
   ^ SyntaxError: Unexpected '@'.
